Quotes in csv title import break maps - FIXED
If domain name contain CPT and home page is set to current location then it breaks the links on listing pages - FIXED
geodir_is_page() fails if post_type query var is an array - FIXED
Features widget add item button does not do anything for new widgets - FIXED

v1.5.8
Local .mo file path points to wrong location - FIXED
Debugging notice printing on plugins.php page - FIXED

v1.5.7
GD Export should split requests to skip out of memory problem - FIXED
Added filters to change img urls for uses like CDN - ADDED
Added filters to be able to add your own vars to titles and meta - ADDED
Some plugins/themes can unset the page_id which breaks some features - FIXED
Events with long running times sometimes not showing on the map - FIXED
Some notification subjects not translatable - FIXED
Datepicker custom filed now has filter to add extra params - ADDED
Visual Composer can throw error for widget view all links - FIXED
Added TouristAttraction schema type for categories - ADDED
Added filter to be able to add/remove schema types - ADDED
Notifications email messages sent by GD should be translatable - FIXED
Changes for the neighbourhood system improvement - CHANGED
id & style class added to custom field type fieldset - ADDED
Home map shortcode now supports latitude longitude args - ADDED
Made few changes for W3C validation - CHANGED
Font awesome updated to 4.5.0 - CHANGED
New filter added to use group by clause in map marker query - ADDED
Custom field option values should be translatable - FIXED
Permalink pages settings saving on a different wpml language breaks pages settings - FIXED
Added filter to be able to search listing results map json - ADDED
Able to enter title for url fields with "|" separator like "http://wpgeodirectory.com|GeoDirectory" - CHANGED
Listing width option does not working in related listing widget - FIXED
For category field type "select" it should add parent category also when a sub-category is selected - FIXED