@@ -9,6 +9,8 @@ Quotes in csv title import break maps - FIXED
 If domain name contain CPT and home page is set to current location then it breaks the links on listing pages - FIXED
 geodir_is_page() fails if post_type query var is an array - FIXED
 Features widget add item button does not do anything for new widgets - FIXED
+Added option to bounce marker pin on listing hover on listing page - ADDED
+Multinews theme compatibility changes for new version - FIXED
 
 v1.5.8
 Local .mo file path points to wrong location - FIXED
